...
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="btnLanguage">"SELECT"</string>
    <string name="register_title">"Register"</string>
    <string name="register_username">"Username"</string>
    <string name="password_repeat">"Repeat password"</string>
    <string name="register_checkbox">"I agree to terms and conditions"</string>
    <string name="register_btn">"SUBMIT"</string>
    <string name="selectedlanguage">English</string>
    <string name="language">LANGUAGES</string>
    <string name="emailError">Please Enter Valid Email</string>
    <string name="userError">Username Length must be more than 4 characters</string>
    <string name="passwordError">Password Length must be more than 6 characters</string>
    <string name="repeatError">Please Enter Repeat Password</string>
...
