<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edit_bio_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:text="@string/edit_bio_heading"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/bio_username_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/bio_hint_displayed_username"
            android:inputType="text"
            android:paddingBottom="16dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_bio_header" />

        <EditText
            android:id="@+id/bio_age_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/bio_hint_age"
            android:inputType="number"
            android:paddingBottom="16dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio_username_input" />

        <EditText
            android:id="@+id/bio_city_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/bio_hint_city"
            android:inputType="text"
            android:paddingBottom="16dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio_age_input" />

        <LinearLayout
            android:id="@+id/bio_checkboxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio_city_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio_checkboxes_interests_heading"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/edit_bio_checkbox_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_games"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/edit_bio_checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board_games"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/edit_bio_checkbox_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttrpgs"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/edit_bio_checkbox_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/war_games"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/edit_bio_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/black"
            android:enabled="true"
            android:text="@string/submit_button_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio_checkboxes"

            app:layout_constraintVertical_bias="0.2" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:adjustViewBounds="false"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:scaleType="fitStart"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/bio_username_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_bio_header"
            app:layout_constraintVertical_bias="0.166"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/edit_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/salmon"
            android:layout_marginStart="24dp"
            android:scaleType="fitStart"
            android:text="@string/edit_proile_image"
            app:layout_constraintBottom_toTopOf="@+id/bio_username_input"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_bio_header"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>